--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="shortcut icon" href="./img/favicon.ico">
 </head>
 <body>
+    <!-- header -->
     <header>
+        <!-- navbar -->
         <nav>
             <ul class="nav-list">
                 <li><a href="#presentation">Présentation</a></li>
@@ -22,12 +24,14 @@
         <h1>FLORIAN <br>CAMPION</h1>
     </header>
     <main>
+        <!-- Presentation -->
         <section id="presentation" >
             <h2>présentation</h2>
             <div class="presentation">
                 <div class="txt-presentation">
                     <p>Je m’apelle Florian Campion, actuellement en formation de développeur web  Front-End à l’institut Solacroup. Je me suis reconverti vers le développement web après avoir fait un  BTS Comptabilité et Gestion. C’est un domaine qui m’a toujours attiré.</p>
                 </div>
+                <!-- CV -->
                 <div class="cv">
                     <img src="./img/Florian-Campion.svg" alt="cv-floriancampion">
                     <a href="./Florian-Campion.pdf" download="">
@@ -35,13 +39,14 @@
                     </a>
                 </div>
             </div>
-            
         </section>
+        <!-- Citation -->
         <section class="citation">
             <h3>“L’expérience : c’est là le fondement de toutes nos connaissances, et c’est de là qu’elles tirent leur première origine”</h3>
             <hr class="ligne-citation">
             <h4>John Locke</h4>
         </section>
+        <!-- Compétences -->
         <section id="competences" class="competences">
             <h2>Compétences</h2>
                 <ul class="hexagone">
@@ -102,6 +107,7 @@
                 </li>
             </ul>
         </section>
+        <!-- Portfolio -->
         <section id="portfolio" class="portfolio">
             <h2>Portfolio</h2>
             <hr>
@@ -128,9 +134,11 @@
                 
             </div>
         </section>
+        <!-- Contact -->
         <section id="contact" class="contact">
             <h2>Contact</h2>
             <hr>
+            <!-- Formulaire de contact -->
             <div class="container-form">
                 <form class="formulaire" action="https://formspree.io/f/mpzbalkn" method="POST">
                     <label>
@@ -147,6 +155,7 @@
                 </form>
             </div>
         </section>
+        <!-- Footer -->
         <footer>
             <div class="container-footer">
                 <div class="icon">
